# biosigx

./: pyproject.toml
src/biosigx/: app.py  data.py  logger.py  main.py  model.py  models.py  plot.py  train.py  utils.py  visualise.py
